--- a/app/templates/app/event/event_detail.html
+++ b/app/templates/app/event/event_detail.html
@@ -3,31 +3,28 @@
 {% block content %}
 <div class="container">
 
-    <!-- Título y Botón -->
     <div class="row mt-4">
         <div class="d-flex justify-content-between align-items-center">
             <h1>{{ event.title }}</h1>
-            {% if request.user == event.organizer %}
-                <div>
-                    <a href="{% url 'event_edit' event.id %}" class="btn btn-outline-primary me-2">
-                        <i class="bi bi-pencil me-1"></i>Editar
+            <div>
+                {% if request.user == event.organizer %}
+                    <div>
+                        <a href="{% url 'event_edit' event.id %}" class="btn btn-outline-primary btn-sm me-2">
+                            <i class="bi bi-pencil me-1"></i>Editar
+                        </a>
+                        <form action="{% url 'event_delete' event.id %}" method="POST" class="d-inline">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-outline-danger btn-sm">
+                                <i class="bi bi-trash me-1"></i>Eliminar
+                            </button>
+                        </form>
+                    </div>
+                {% else %}
+                    <a href="{% url 'ticket_form' %}" class="btn btn-success btn-sm">
+                        <i class="bi bi-ticket-perforated me-1"></i> Comprar Entrada
                     </a>
-                    <form action="{% url 'event_delete' event.id %}" method="POST" class="d-inline">
-                        {% csrf_token %}
-                        <button type="submit" class="btn btn-outline-danger">
-                            <i class="bi bi-trash me-1"></i>Eliminar
-                        </button>
-                    </form>
-                </div>
-            {% endif %}
-        </div>
-    </div>
-    
-    <div class="row mt-4">
-        <div class="card">
-            <a href="{% url 'ticket_form' %}" class="btn btn-primary">
-                <i class="bi bi-ticket-perforated me-1"></i> Comprar Entrada
-            </a>
+                {% endif %}
+            </div>
         </div>
     </div>
 
