--- a/app/templates/app/event/events.html
+++ b/app/templates/app/event/events.html
@@ -58,6 +58,18 @@
                                         <i class="bi bi-trash" aria-hidden="true"></i>
                                     </button>
                                 </form>
+                                <a>
+                                    <form>
+                                        <button type="submit" class="btn btn-sm btn-outline-warning" title="Favorito">
+                                            {% if event in favorite_events %}
+                                                <i class="bi bi-star-fill" aria-hidden="true"></i>
+                                            {% else %}
+                                                <i class="bi bi-star" aria-hidden="true"></i>
+                                            {% endif %}
+                                        </button>
+
+                                    </form>
+                                </a>
                             {% endif %}
                         </div>
                     </td>
